Correct spacing

--- a/public/css/pure-sponsorships-option3.css
+++ b/public/css/pure-sponsorships-option3.css
@@ -112,7 +112,7 @@ ul.pcsponsor-single-status-buttons li {
 	background: #DADADA;
 	list-style: none;
 	border-radius: 100%;
-	margin-right: 20px;
+	margin-right: 10px;
 }
 .pcs-rounded .info .slots ul li.pcsponsor-taken { background: orange; }
 .pcs-rounded .info .slots span { float: left; font-size: 20px; color: #666;margin-bottom: 15px; }
